<resources>
    <string name="app_name">ConfBeer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio_frag_tv_que_es">¿Qué es BeerConf?</string>
    <string name="inicio_frag_tv_que_es_resp">BeerConf una vez más, cómo todos los años, hace el evento más grande de comunidad cervecera en los que apasionados por aprender, emprender e innovar se encuentran en un mismo lugar para escuchar a expertos de la industria que durante horas comparten su conocimiento.</string>
    <string name="inicio_frag_tv_por_que">¿Por qué asistir?</string>
    <string name="inicio_frag_tv_por_que_resp">Porque esto solo sucede una vez cada año.
Porque en America Latina la BeerConf es el único evento de la industria cervecera que reúne a profesionales de altísimo nivel en un solo lugar.
Porque en este evento conocerás personas que en el futuro pueden ser tus amigos, tus colegas, tus colaboradores y hasta tus socios.
Porque en esta versión todo girará al rededor de la pregunta: ¿Qué habilidades hacen a un gran profesional.</string>
    <string name="inicio_frag_tv_info">Información de la BeerConf Argenitna 2020</string>
    <string name="inicio_frag_tv_info_resp">
        \u0009 &#8226; Es un evento exclusivo para cerveceros o quines quieren verlo.\n
        \u0009 &#8226; (Sí esto te apasiona, no faltes).\n
        \u0009 &#8226; Fecha: Sábado 3 de Agosto de 2020.\n
        \u0009 &#8226; Lugar: Cerveceria LAGASH.\n
        \u0009 &#8226; Dirección: Ruis Moreno 683 s/n, CdelU, 3260 Entre Risa, ARG.</string>
</resources>