<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevationHome"
                android:layout_margin="@dimen/cardMarginHome">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_parrafo"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imageViewHome"
                        android:scaleType="centerCrop"
                        android:src="@drawable/banner_beer_conf" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoViewHome"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_que_es"
                        android:justificationMode="inter_word"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginRight="@dimen/HomeSubtitulo"
                        android:layout_marginLeft="@dimen/HomeSubtitulo"
                        android:layout_marginTop="@dimen/HomeSubtitulo"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoViewHome"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="@dimen/viewMarginTopHome"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/inicio_frag_tv_que_es_resp"
                        android:textSize="@dimen/tamanioSubtitulo"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginRight="@dimen/HomeSubtitulo"
                        android:layout_marginLeft="@dimen/HomeSubtitulo"
                        android:layout_marginTop="@dimen/HomeSubtitulo"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevationHome"
                android:layout_margin="@dimen/cardMarginHome">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/design_default_color_background"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imageViewHome"
                        android:scaleType="centerCrop"
                        android:src="@drawable/conference_beer"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoViewHome"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/inicio_frag_tv_por_que"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginRight="@dimen/HomeSubtitulo"
                        android:layout_marginLeft="@dimen/HomeSubtitulo"
                        android:layout_marginTop="@dimen/HomeSubtitulo"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoViewHome"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="@dimen/viewMarginTopHome"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/inicio_frag_tv_por_que_resp"
                        android:textSize="@dimen/tamanioSubtitulo"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginRight="@dimen/HomeSubtitulo"
                        android:layout_marginLeft="@dimen/HomeSubtitulo"
                        android:layout_marginTop="@dimen/HomeSubtitulo"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevationHome"
                android:layout_margin="@dimen/cardMarginHome">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/design_default_color_background"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/inicio_frag_tv_info"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginRight="@dimen/HomeSubtitulo"
                        android:layout_marginLeft="@dimen/HomeSubtitulo"
                        android:layout_marginTop="@dimen/HomeSubtitulo"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoViewHome"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="@dimen/viewMarginTopHome"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/inicio_frag_tv_info_resp"
                        android:textSize="@dimen/tamanioSubtitulo"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginRight="@dimen/HomeSubtitulo"
                        android:layout_marginLeft="@dimen/HomeSubtitulo"
                        android:layout_marginTop="@dimen/HomeSubtitulo"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>